pathfinder/compiler/parser/Tests/bad-009.stable.err
Statistics about stderr of test 'bad-009` in directory 'compiler/parser`:
          3 lines,        26 words,       176 chars   in lines not matching '^$|^#|^=`
=         3 lines,        26 words,       176 chars   in lines not matching '^$|^#`
#        15 lines,        57 words,       334 chars   in all lines

stderr of test 'bad-009` in directory 'compiler/parser` itself:


# 17:18:34 >  
# 17:18:34 >  Mtimeout -timeout 60 ./bad-009 bad-009 
# 17:18:34 >  

syntax/parse error, unexpected ... on line/in: 1, column 31 (next token is `m')
parse error: XQuery parsing failed
# halted in parser.y (PFparse), line 2868

# 17:18:34 >  
# 17:18:34 >  Done.
# 17:18:34 >  

