pathfinder/compiler/parser/Tests/bad-009.xq
(: one comment :) closer too much :)
42
